Add Reminder/ Edit Reminder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,7 @@
 
   <div id="content_top_login">
     <div id="content_top_welcome">
-      <div id="top_image">
-          <%= image_tag "logo.png" %>
-      </div>
-      <%= render partial: '/layouts/session' %>
+      <%= render partial: 'layouts/session' %>
     </div>
   </div>
 
