--- a/app/views/layouts/_session.html.erb
+++ b/app/views/layouts/_session.html.erb
@@ -1,5 +1,7 @@
 <% if user_signed_in? %>
-
+  <div id="top_image">
+    <%= link_to image_tag("logo.png"), reminders_path %>
+  </div>
   <div id="top_welcome">
     Bem Vindo<br />
     <%= current_user.full_name %><br />
@@ -7,6 +9,9 @@
   </div>
 
 <% else %>
+  <div id="top_image">
+    <%= link_to image_tag("logo.png"), root_path %>
+  </div>
 
   <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
     <div><%= f.label :email %><br />
