--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -12,11 +12,13 @@
     <% @reminders.each do |reminder| %>
       <tr>
         <td><%= reminder.name %></td>
-        <td><%= reminder.time %></td>
+        <td><%= l reminder.time, format: :custom %></td>
         <td><%= reminder.days %></td>
         <td><%= l reminder.start_at, format: :short %></td>
         <td><%= link_to 'Editar', [:edit, reminder] %></td>
-        <td><%= link_to 'Deletar',  reminder_path(reminder), :data => { :confirm => "Tem certeza?" }, :method => :delete %></td>
+        <td><%= link_to 'Deletar',  reminder_path(reminder), :data => {
+         :confirm => "Tem certeza que deseja deletar?" }, :method => :delete
+         %></td>
       </tr>
     <% end %>
   </tbody>
