--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -4,7 +4,7 @@ body{
 
 #content_index{
 	width: 1024px;
-	height:700px;
+	height:550px;
 	margin:0 auto;
 	padding:0;
 }
@@ -15,19 +15,34 @@ body{
 	margin:0;
 	padding:0;
 }
-#image_top_login{
+#top_image{
 	margin: 5px 0px 0px 10px;
 	padding:0;
 	width:200px;
 	height:50px;
 	float:left;
 }
-#login_top_login{
-	margin: 15px 10px 0px 0px;
+#top_welcome{
+	margin: 5px 90px 0px 0px;
 	padding:0;
-	height: 30px;
+	height: 55px;
 	float: right;
 	display:block;
+	font:Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	font-weight:bolder;
+	color:#FFF;
+}
+#top_welcome a{
+	text-decoration: none;
+	color:#66FF33;
+}
+#top_login{
+	margin: 20px 0px 0px 2px;
+	padding:0;
+	width:790px;
+	height: 55px;
+	float: right;
 	font:Arial, Helvetica, sans-serif;
 	font-weight:bolder;
 	color:#FFF;
@@ -36,7 +51,7 @@ body{
 /*CONTENT CENTER*/
 #content_center{
 	width:900px;
-	height:620px;
+	height:550px;
 	margin: 0 auto;
 	background-color:#FFF;
 	-webkit-border-radius: 30px;
@@ -44,30 +59,105 @@ body{
 	border-radius: 30px;
 	border-radius: 30px;
 }
-#column_left{
-	width:405px;
+#content_column{
+	width:900px;
+	height:620px;
+}
+
+/*CONTENT CENTER COLUMN_RIGHT*/
+table thead tr th.name{
+	width: 80px;
+}
+table thead tr th.hour{
+	width: 70px;
+}
+table thead tr th.days{
+	width: 100px;
+}
+table thead tr th.start_at{
+	width: 260px;
+}
+table thead tr th.edit{
+	width: 90px;
+}
+table thead tr th.delete{
+	width: 80px;
+}
+table tbody tr.space{
+	line-height: 20px;
+}
+table tbody td.space{
+	margin: 10px;
+}
+#column_right_form_index{
+	width:300px;
 	height:550px;
 	float:left;
-	margin: 2% 0px 0px 3%;
+	margin: 30px 0px 0px 100px;
+	text-align:center;
+	font-weight:bold;
+}
+#column_right_form_index h2{
+	text-align:center;
+	font-size: 20px;
+}
+#column_right_form_index hr{
+	border:solid 5px;
+}
+#column_right_login_index{
+	width:540px;
+	height:520px;
+	float:left;
+	margin: 30px 0px 0px 0px;
+	text-align:center;
+}
+#column_right_login_index a{
+	color:#030;
+	font-weight:bold;
+}
+#column_right_login_index h2{
+	text-align:left;
+	font-size: 30px;
+}
+
+#column_right_login_index hr{
+	border:solid 8px;
+}
+
+#column_right_login_index td{
+	font-family:Verdana, Geneva, sans-serif;
+	text-align: center;
+}
+#column_right_login_index th{
+	font-family:Verdana, Geneva, sans-serif;
+	font-weight:bold;
+	text-align: center;
+}
+#pages_column_right{
+	width:500px;
+	margin: 20px 0px 0px 25px;
+	height:500px;
+}
+/*CONTENT CENTER COLUMN_LEFT*/
+#column_left{
+	width:350px;
+	height:550px;
+	float:left;
+	margin: 30px 0px 0px 60px;
+}
+#column_left_menu{
+	width:250px;
+	height:520px;
+	float:left;
+	margin: 30px 0px 0px 40px;
 }
 #column_left h2{
-	text-align:center;
-	font-family:Verdana, Geneva, sans-serif;
+	text-align: center;
+	font-family: Verdana, Geneva, sans-serif;
+	font-weight:bold;
 }
 #column_left p{
 	text-align:justify;
 	font-family:Verdana, Geneva, sans-serif;
-}
-#column_right{
-	width:405px;
-	height:550px;
-	float:left;
-	margin: 2% 0px 0px 3%;
-	text-align:center;
-}
-#column_right td{
-	font-family:Verdana, Geneva, sans-serif;
-	font-weight:bold;
-	text-align: right;
 }
 
