--- a/app/views/layouts/_session.html.erb
+++ b/app/views/layouts/_session.html.erb
@@ -5,6 +5,7 @@
   <div id="top_welcome">
     Bem Vindo<br />
     <%= current_user.full_name %><br />
+    Você possui <%= current_user.reminders.count %> Lembretes<br/>
     <%= link_to "Sair", destroy_user_session_path, :method =>"delete" %>
   </div>
 
@@ -12,18 +13,16 @@
   <div id="top_image">
     <%= link_to image_tag("logo.png"), root_path %>
   </div>
+  <div id="top_login">
+    <%= form_for(resource, :as => resource_name,
+      :url => session_path(resource_name)) do |f| %>
+      <%= f.label :email %>
+      <%= f.email_field :email, size: "25" %>
 
-  <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-    <div><%= f.label :email %><br />
-    <%= f.email_field :email %></div>
+      <%= f.label :password %>
+      <%= f.password_field :password, size: "25" %>
 
-    <div><%= f.label :password %><br />
-    <%= f.password_field :password %></div>
-
-    <% if devise_mapping.rememberable? -%>
-      <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+      <%= f.submit "Sign in" %>
     <% end %>
-
-    <div><%= f.submit "Sign in" %></div>
-  <% end %>
+  </div>
 <% end %>
