--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -102,7 +102,7 @@ table tbody td.space{
 	font-size: 20px;
 }
 #column_right_form_index hr{
-	border:solid 5px;
+	border:solid 5px #330;
 }
 #column_right_login_index{
 	width:540px;
@@ -114,6 +114,7 @@ table tbody td.space{
 #column_right_login_index a{
 	color:#030;
 	font-weight:bold;
+	text-decoration: none;
 }
 #column_right_login_index h2{
 	text-align:left;
@@ -121,7 +122,7 @@ table tbody td.space{
 }
 
 #column_right_login_index hr{
-	border:solid 8px;
+	border:solid 5px #330;
 }
 
 #column_right_login_index td{
@@ -147,10 +148,24 @@ table tbody td.space{
 }
 #column_left_menu{
 	width:250px;
-	height:520px;
+	height:420px;
 	float:left;
-	margin: 30px 0px 0px 40px;
+	margin: 85px 30px 0px 10px;
+	text-align:center;
 }
+.menu_user_link a{
+	color:#030;
+	text-decoration: none;
+}
+.menu_user_link a:hover{
+	color:#960;
+	text-decoration: none;
+}
+.menu_user_dt{
+	color:#330;
+	text-decoration: none;
+}
+
 #column_left h2{
 	text-align: center;
 	font-family: Verdana, Geneva, sans-serif;
