melhorias em sass/css e arquivos haml

--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:content) do %>
   <div id="content_column">
-    <div class="column" id="column_left_menu">
+    <div class="column" id="menu">
       <d1>
         <dt class="menu_user_link"><%= link_to 'Home', reminders_path %>
           </dt><br />
