--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,5 +1,6 @@
 body{
-	background-color:#030;
+	background-color: #030;
+	font-family: Verdana, Geneva, sans-serif;
 }
 
 #content_index{
@@ -16,7 +17,7 @@ body{
 	padding:0;
 }
 #top_image{
-	margin: 5px 0px 0px 10px;
+	margin: 5px 0px 0px 87px;
 	padding:0;
 	width:200px;
 	height:50px;
@@ -38,26 +39,15 @@ body{
 	color:#66FF33;
 }
 #top_login{
-	margin: 20px 0px 0px 2px;
+	margin: 20px 0px 0px 135px;
 	padding:0;
-	width:790px;
-	height: 55px;
-	float: right;
+	float: left;
 	font:Arial, Helvetica, sans-serif;
 	font-weight:bolder;
 	color:#FFF;
 }
 
 /*CONTENT CENTER*/
-#content_center{
-	width:900px;
-	height:550px;
-	margin: 0 auto;
-	background-color:#FFF;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-	border-radius: 30px;
 }
 #content_column{
 	width:900px;
@@ -65,23 +55,13 @@ body{
 }
 
 /*CONTENT CENTER COLUMN_RIGHT*/
-table thead tr th.name{
-	width: 80px;
+table thead tr{
+	font-size: 13px;
+	margin-right: 10px;
 }
-table thead tr th.hour{
-	width: 70px;
-}
+
 table thead tr th.days{
-	width: 100px;
-}
-table thead tr th.start_at{
-	width: 260px;
-}
-table thead tr th.edit{
-	width: 90px;
-}
-table thead tr th.delete{
-	width: 80px;
+	width: 130px;
 }
 table tbody tr.space{
 	line-height: 20px;
@@ -89,23 +69,9 @@ table tbody tr.space{
 table tbody td.space{
 	margin: 10px;
 }
-#column_right_form_index{
-	width:300px;
-	height:550px;
-	float:left;
-	margin: 30px 0px 0px 100px;
-	text-align:center;
-	font-weight:bold;
-}
-#column_right_form_index h2{
-	text-align:center;
-	font-size: 20px;
-}
-#column_right_form_index hr{
-	border:solid 5px #330;
-}
+
 #column_right_login_index{
-	width:540px;
+	width:630px;
 	height:520px;
 	float:left;
 	margin: 30px 0px 0px 0px;
@@ -133,6 +99,7 @@ table tbody td.space{
 	font-family:Verdana, Geneva, sans-serif;
 	font-weight:bold;
 	text-align: center;
+	padding-right: 28px;
 }
 #pages_column_right{
 	width:500px;
@@ -140,19 +107,6 @@ table tbody td.space{
 	height:500px;
 }
 /*CONTENT CENTER COLUMN_LEFT*/
-#column_left{
-	width:350px;
-	height:550px;
-	float:left;
-	margin: 30px 0px 0px 60px;
-}
-#column_left_menu{
-	width:250px;
-	height:420px;
-	float:left;
-	margin: 85px 30px 0px 10px;
-	text-align:center;
-}
 .menu_user_link a{
 	color:#030;
 	text-decoration: none;
@@ -165,14 +119,3 @@ table tbody td.space{
 	color:#330;
 	text-decoration: none;
 }
-
-#column_left h2{
-	text-align: center;
-	font-family: Verdana, Geneva, sans-serif;
-	font-weight:bold;
-}
-#column_left p{
-	text-align:justify;
-	font-family:Verdana, Geneva, sans-serif;
-}
-
