--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th class ="name">Nome</th>
       <th class = "hour">Horario</th>
-      <th class = "days">Quantidade de Dias</th>
+      <th class = "days">Quant. de Dias</th>
       <th class="start_at">Dia inicial</th>
       <th class="edit">Editar</th>
       <th class="delete">Deletar</th>
