--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
   <div id = "content_index">
-    <div id="content_top_login">
+    <div id="content_top">
       <%= render partial: 'layouts/session' %>
     </div>
 
