--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -8,5 +8,5 @@
   <%= f.text_field :email %><br />
   <%= f.label :content %><br />
   <%= f.text_area :content, rows: 15  %><br />
-  <p><%= f.submit "Enviar" %></p>
+  <p><%= f.submit "Enviar", class: "button" %></p>
 <% end %>
