--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,9 +16,9 @@
     <div>Digite sua senha atual:<br />
     <%= f.password_field :current_password %></div>
 
-    <div><%= f.submit "Atualizar" %></div>
+    <div class="send"><%= f.submit "Atualizar", class: "button"  %></div>
   <% end %>
 
-  <h3>Cancelar a conta:</h3>
+  <p>Cancelar a conta:</p>
 
   <p><%= link_to "Cancelar minha conta", registration_path(resource_name), :data => { :confirm => "Deseja cancelar?" }, :method => :delete %>.</p>
