--- a/app/assets/stylesheets/page.sass
+++ b/app/assets/stylesheets/page.sass
@@ -101,7 +101,7 @@ body
     font-weight: bolder
     height: 320px
     margin: 85px 13px 0px 20px
-    width: 180px
+    width: 185px
 
     dt
       color: #330
@@ -157,4 +157,5 @@ body
       width: 100px
 
     .bar
-      overflow: scroll
+      overflow: auto
+      height: 300px
