sass, haml, ortografia e inicio teste

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,2 +1,6 @@
 // =require reset
-// =require page
+// =require common
+// =require menu/menu
+// =require pages/page_logged
+// =require pages/page_index
+// =require top/top
