--- a/app/views/reminders/_form.html.haml
+++ b/app/views/reminders/_form.html.haml
@@ -9,7 +9,7 @@
   = f.time_select :time, default: { hour: '00', minute: '00' }
   %br
 
-  Quantidades de Dia:
+  Quantidade de Dias:
   %br
   = f.text_field :days
   %br
