--- a/app/views/reminders/index.html.haml
+++ b/app/views/reminders/index.html.haml
@@ -9,7 +9,7 @@
         %tr
           %th Nome
           %th Horário
-          %th Quants de Dias
+          %th Quant de Dias
           %th.days Dia inicial
           %th Editar
           %th Deletar
@@ -30,5 +30,5 @@
             %td
               = link_to 'Deletar',  reminder_path(reminder), :data => { :confirm => "Tem certeza que deseja deletar?" }, method: :delete
             %td
-              = link_to 'Confirmando', sent_emails_path
+              = link_to 'Visualizar emails', sent_emails_path
   %hr
