Test Model, Routs, Controller

--- a/app/assets/stylesheets/pages/page_index.sass
+++ b/app/assets/stylesheets/pages/page_index.sass
@@ -3,7 +3,7 @@
 #content_center
   +border-radius(30px)
   background-color: #FFF
-  height: 500px
+  height: 100%
   margin: 0 auto
   width: 900px
 
